--- a/layout-projeto-final/CSS/style.css
+++ b/layout-projeto-final/CSS/style.css
@@ -2,20 +2,20 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-@media screen and (min-width: 320px) {
-    
-    .jl-page-wrapper{
 
+}
+
+@media screen and (min-width: 320px) {
+
+    .jl-page-wrapper{ /* Estrutura do DIV para Pagina */
         width: 100%;
         height: 100vh;
-        display: block;
-        background-color: #1c1c1c;
-        border: 30px solid #000;
-
+        display: block; 
+        background-color:#1c1c1c; /* Cor cinza no corpo da pagina */
+        border: 30px solid #000; /* Borda preta na pagina */
+        
     }
-
-    .jl-topbar{
+    .jl-topo{ /* Ajustando topo da pagina para menu */
         width: 100%;
         height: 110px;
         display: block;
@@ -23,78 +23,82 @@
         position: fixed;
         top: 0;
         left: 0;
-
     }
 
-    .jl-logo{
+    
+    .jl-logo{ /*Modelagem do Logo*/
         width: 74px;
         height: 100px;
         float: left;
         margin-left: 60px;
-        background-color: #2CCB69;
+        background-color: #2ccb69;
         border-radius: 0 0 37px 0;
-
-        }
-    
-    .jl-logo-img {
+    }
+    .jl-logo-img{ /* Modelagem da imagem do Logo */
         width: 46px;
         height: 31px;
         display: block;
         margin: 55px auto 0 auto;
-
     }
-
     .jl-menu{
-        display:none;
-
-
+        display: none;
     }
 
 }
-
 @media screen and (min-width: 576px){
 
 }
+@media screen and (min-width: 768px){
 
-@media screen and (min-width: 768px) {
-    
 }
-
 @media screen and (min-width: 992px){
+
     .jl-menu{
         display: table;
         float: left;
         height: 110px;
         margin-left: 30px;
-
     }
-
-    .jl-menu a{
+    .jl-menu a {
         font-family: 'Open Sans';
         font-size: 16px;
         color: #bcbcbc;
         text-decoration: none;
         text-transform: lowercase;
         display: inline-block;
-        padding: 0 20px;
-        margin-top: 50px;
-
+        margin: 50px 20px 0 20px;
+        font-weight: 400;
+        position: relative;
     }
-
     .jl-menu a:first-child{
-        padding-left: 0;
+        margin-left: 0;
     }
-    
-}
+    .jl-menu a:hover {
+        color:#2ccb69;
+    }
+    .jl-menu a:before{
+        content: '';
+        width: 0;
+        height: 4px;
+        background-color: #2ccb69;
+        display: block;
+        position: absolute;
+        bottom: -6px;
+        left: 0;
+        transition: all 0.2s ease-out;
 
-@media screen and (min-width: 1200px) {
-    
-}
+    }
+    .jl-menu a:hover:before{
+        width: 100%;
+    }
 
-@media screen and (min-width: 1364px) {
-    
 }
+@media screen and (min-width: 1200px){
 
-@media screen and (min-width: 1600px) {
-    
+}
+@media screen and (min-width: 1364px){
+
+}
+@media screen and (min-width: 1600px){
+
 }
