--- a/layout-projeto-final/CSS/style.css
+++ b/layout-projeto-final/CSS/style.css
@@ -93,9 +93,7 @@
     .jl-menu a:hover:before{
         transform: scale(1 , 1 );
     }
-    .jl-contact-info{
-
-    }
+    
     .jl-btn-contact{
         width: 45px;
         height: 45px;
@@ -108,6 +106,7 @@
         right: 45px;
         border-radius: 50%;
         z-index: 200;
+        transition: all 0.2s ease-out;
 
     }
     .jl-btn-contact:hover{
@@ -124,3 +123,32 @@
 @media screen and (min-width: 1600px){
 
 }
+
+/* CLASSES UTILITARIAS */
+
+.jl.text-green{
+color:#2ccb69;
+}
+.jl.text-dark{
+color:#1c1c1c;
+}
+.jl.text-light{
+color:#bcbcbc;
+}
+.jl.text-black{
+color:#000;
+}
+.jl.bg-green{
+background-color:#2ccb69;
+}
+.jl.bg-dark{
+background-color:#1c1c1c;
+}
+.jl.bg-light{
+background-color:#bcbcbc;
+}
+.jl.bg-black{
+background-color:#000;
+}
+
+/*  */
