--- a/layout-projeto-final/CSS/style.css
+++ b/layout-projeto-final/CSS/style.css
@@ -12,13 +12,28 @@ p{
 
 @media screen and (min-width: 320px) {
 
-    .jl-page-wrapper{ /* Estrutura do DIV para Pagina */
+    .jl-page-wrapper, .jl-preloader{ /* Estrutura do DIV para Pagina */
         width: 100%;
         height: 100vh;
         display: block; 
         background-color:#1c1c1c; /* Cor cinza no corpo da pagina */
         border: 30px solid #000; /* Borda preta na pagina */
         
+    }
+    .jl-preloader{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        z-index: 1000;
+        position: fixed;
+        top: 0;
+        left: 0;
+    }
+    .jl-preloader-inner{
+        margin-top: -45px;
+
     }
     .jl-topo{ /* Ajustando topo da pagina para menu */
         width: 100%;
@@ -168,11 +183,11 @@ p{
         border-radius: 50%;
         z-index: 200;
         transition: all 0.2s ease-out;
+        border: none;
+        cursor: pointer;
 
     }
-    .jl-btn-contact:hover{
-        background-position-y: -45px;
-    }
+    
     .jl-contact-info{
         width: 245px;
         height: 165px;
@@ -181,6 +196,7 @@ p{
         bottom:115px ;
         right: 65px;
         z-index: 200;
+        display: none;
 
     }
 
@@ -226,4 +242,44 @@ background-color:#bcbcbc;
 background-color:#000;
 }
 
-/*  */
+.jl-mar-15{
+    margin: 15px;
+}
+.jl-mar-top-15{
+    margin-top: 15px;
+}
+.jl-mar-right-15{
+    margin-right: 15px;
+}
+.jl-mar-bottom-15{
+    margin-bottom: 15px;
+}
+.jl-mar-left-15{
+    margin-left: 15px;
+}
+
+.jl-pad-15{
+    padding: 15px;
+}
+.jl-pad-top-15{
+    padding-top: 15px;
+}
+.jl-pad-right-15{
+    padding-right: 15px;
+}
+.jl-pad-bottom-15{
+    padding-bottom: 15px;
+}
+.jl-pad-left-15{
+    padding-left: 15px;
+}
+
+
+
+/* Classes de Comportamento */
+.jl-is-open{
+    display: block;
+}
+.jl-change-icon{
+    background-position-y: -45px ;
+}
